<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
        <ImageView
            android:id="@+id/ivOctocat"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/octocat"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/ivOctocat2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/octocat_2"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnZoomin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="13sp"
                android:text="@string/zoomin"
                android:textAllCaps="false"
                android:layout_margin="2dp"/>
            <Button
                android:id="@+id/btnZoomout"
                android:textAllCaps="false"
                android:text="@string/zoomout"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"/>
            <Button
                android:id="@+id/btnFadein"
                android:textAllCaps="false"
                android:text="@string/fadein"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnFadeout"
                android:textAllCaps="false"
                android:text="@string/fadeout"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/rotate"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnRotate"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/move"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnMove"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:text="@string/slideup"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSlideUp"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/slidedown"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSlidedown"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/blink"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnBlink"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:text="@string/bounce"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnBounce"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/crossfade"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnCrossfade"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/sequential"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSequential"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:text="@string/together"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="13sp"
                android:id="@+id/btnTogether"
                android:layout_margin="2dp"/>
            <Button
                android:text="@string/stop"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textSize="13sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnStop"
                android:layout_margin="2dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>